--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rodrigopv",
   "version": "0.1.0",
+  "homepage": "https://rodrigopv.com",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -13,6 +14,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
+    "react-google-recaptcha-v3": "^1.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
